# graph-neuralmorpho

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  mkdocs.yml  pyproject.toml
docs/: index.md  modules.md
graph_neuralmorpho/: perturbations.py
graph_neuralmorpho/morphometrics/: compute_morphometrics.py  morphopy.py
notebooks/: 00-kpz-morphopy_feature_extraction.ipynb  01a-kpz-morphopy_features_eda.ipynb  01b-kpz-morphopy_features-classification.ipynb
tests/: test_foo.py
